--- a/OpenGLSimple/makefile
+++ b/OpenGLSimple/makefile
@@ -1,2 +1,5 @@
 linux:
 	clang++ main.cpp -o main -lsfml-graphics -lsfml-window -lsfml-system -lGL -std=c++17 -w
+
+macbrew:
+	clang++ main.cpp glad/src/glad.c -o main -I glad/include -I /opt/homebrew/include -L /opt/homebrew/lib -lsfml-graphics -lsfml-window -lsfml-system -lGL -std=c++17 -w
