--- a/SFML_OpenGL/CMakeLists.txt
+++ b/SFML_OpenGL/CMakeLists.txt
@@ -18,7 +18,7 @@ FetchContent_MakeAvailable(SFML)
 file(COPY "${CMAKE_SOURCE_DIR}/src/font" DESTINATION "${CMAKE_BINARY_DIR}/bin")
 file(COPY "${CMAKE_SOURCE_DIR}/src/shader" DESTINATION "${CMAKE_BINARY_DIR}/bin")
 
-add_executable(main src/main.cpp ${CMAKE_SOURCE_DIR}/glad/src/glad.c)
+add_executable(main src/main.cpp ${CMAKE_SOURCE_DIR}/glad/src/gl.c)
 target_include_directories(main PUBLIC ${CMAKE_SOURCE_DIR}/glad/include)
 target_compile_features(main PRIVATE cxx_std_17)
 target_link_libraries(main PRIVATE SFML::Graphics)
