--- a/platformer/CMakeLists.txt
+++ b/platformer/CMakeLists.txt
@@ -12,6 +12,11 @@ FetchContent_Declare(SFML
     SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(main src/main.cpp)
+file(GLOB SCRIPTS src/code/*.cpp)
+#file(COPY "${CMAKE_SOURCE_DIR}/src/font" DESTINATION "${CMAKE_BINARY_DIR}/bin")
+#file(COPY "${CMAKE_SOURCE_DIR}/src/image" DESTINATION "${CMAKE_BINARY_DIR}/bin")
+
+add_executable(main src/main.cpp ${SCRIPTS})
+target_include_directories(main PUBLIC ${CMAKE_SOURCE_DIR}/src/script)
 target_compile_features(main PRIVATE cxx_std_17)
 target_link_libraries(main PRIVATE SFML::Graphics)
