--- a/roguelike/src/makefile
+++ b/roguelike/src/makefile
@@ -1,2 +1,7 @@
 linux:
 	clang++ main.cpp code/*.cpp -o main -I/usr/local/incldude -L/usr/local/lib -lsfml-graphics -lsfml-window -lsfml-system -w
+
+macbrew:
+	clang++ main.cpp code/*.cpp -o main -I/opt/homebrew/include -L/opt/homebrew/lib -lsfml-graphics -lsfml-window -lsfml-system -framework OpenGL -framework Cocoa
+
+dummy:
