--- a/roguelike/src/makefile
+++ b/roguelike/src/makefile
@@ -2,6 +2,6 @@ linux:
 	clang++ main.cpp code/*.cpp -o main -I/usr/local/include -L/usr/local/lib -lsfml-graphics-s -lsfml-window-s -lsfml-system-s -w
 
 macbrew:
-	clang++ main.cpp code/*.cpp -o main -I/opt/homebrew/include -L/opt/homebrew/lib -lsfml-graphics -lsfml-window -lsfml-system -framework OpenGL -framework Cocoa
+	clang++ main.cpp code/*.cpp -o main -I/opt/homebrew/include -L/opt/homebrew/lib -lsfml-graphics -lsfml-window -lsfml-system -lGL -w
 
 dummy:
