Makefile for homebrew mac.

--- a/template3dhud/Makefile
+++ b/template3dhud/Makefile
@@ -1,2 +1,5 @@
 windows-msys:
 	g++ main.cpp -o main -Ilib/SFML3/include -Llib/SFML3/lib -lopengl32 -lsfml-graphics -lsfml-window -lsfml-system -mwindows -w
+
+macbrew:
+	g++ main.cpp -o main.out -I/opt/homebrew/include -L/opt/homebrew/lib -framework OpenGL -lsfml-graphics -lsfml-window -lsfml-system -std=c++17 -w
